adding favicon and node server

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <!-- saved from url=(0035)https://www.elia-cfa-afia.com/login -->
 <html slick-uniqueid="3">
+  To get the favicon of a website, you need to load the index HTML of each
+  featured website and check for either of the following: HTML:
+
+  <link rel="icon" type="image/png" href="./AFIA_files/favicon.ico" />
   <link type="text/css" rel="stylesheet" id="dark-mode-custom-link" /><link
     type="text/css"
     rel="stylesheet"
